[package]
name = "rs-netcat"
version = "0.1.0"
author = "荒川　健太郎<kagalpan@kacpp.xyz>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
# envy = "0.4"
# serde = "1.0"
# serde_derive = "1.0"
dotenv = "0.15.0"
anyhow = "1.0.69"
clap = { version = "~4", features = ["derive", "env"] }
regex = "1"
home-dir = "0.1.0"

[[bin]]
name = "rsnc"
path = "src/main.rs"


